<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Catalogue Movie</string>

    <string name="movie_date">Movie Date</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie_name">Movie Name</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_daily_reminder">Daily Reminder Notification</string>
    <string name="pref_description_daily_reminder">Turn on/off daily reminder</string>

    <string name="pref_title_upnp_reminder">Upcoming/Nowplaying Notification</string>
    <string name="pref_description_upnp_reminder">Turn on/off upcoming/nowplaying reminder</string>

    <string name="pref_title_language">Setting Locale</string>
    <string name="pref_description_language">Change your phone localozation</string>

    <string-array name="pref_language">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action">Action</string>
    <string name="setting">Setting</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming Movie</string>
    <string name="search_movie">Search Movie</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="no_data">No data</string>
    <string name="title_activity_setting">Setting</string>
    <string name="search">Search</string>
    <string name="alert_search">Please, enter the movie name</string>
    <string name="daily_notif">Let\'s see catalogue movie today!</string>
    <string name="title_daily_notif">Daily Reminder</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="remove_favorite">Removed from favorite</string>
    <string name="add_favorite">Added to favorite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="appwidget_text">Catalogue Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="image_banner">Image Banner</string>
    <string name="latest_movie">Latest Movie</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="toprated_movie">Top Rated Movie</string>
    <string name="trending_movie">Trending Movie</string>
    <string name="see_all">See All</string>
    <string name="popularity">Popularity</string>
    <string name="logo_codepolitan">logo codepolitan</string>
</resources>
