<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="swDailyReminder"
            android:theme="@style/SCBSwitch"
            android:summary="@string/pref_description_daily_reminder"
            android:title="@string/pref_title_daily_reminder" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="swUpnpReminder"
            android:theme="@style/SCBSwitch"
            android:summary="@string/pref_description_upnp_reminder"
            android:title="@string/pref_title_upnp_reminder" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_activity_settings">

        <ListPreference
            android:defaultValue="English"
            android:entries="@array/pref_language"
            android:entryValues="@array/pref_language"
            android:key="language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_language"
            android:summary="@string/pref_description_language"/>

    </PreferenceCategory>

</PreferenceScreen>