<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp"
    android:background="@android:color/white"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/movie_poster" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/movie_name"/>

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxLines="3"
                android:fontFamily="@font/roboto_regular"
                android:ellipsize="end"
                android:text="@string/movie_description"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/movie_date"
                android:maxLines="2"
                android:ellipsize="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/btn_detail"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/contm"
                    android:layout_marginEnd="7dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btn_custom"
                    android:text="@string/detail" />

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/contm"
                    android:layout_marginStart="7dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btn_custom"
                    android:text="@string/share" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>