<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageView
            android:id="@+id/img_widget"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            app:srcCompat="@mipmap/ic_launcher"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:layout_above="@id/release_date"
            android:ellipsize="end"
            android:layout_gravity="bottom"
            android:textColor="@android:color/white"
            android:text="@string/movie_name"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/movie_date"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:ellipsize="end"/>

    </RelativeLayout>

</LinearLayout>

