<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="50dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="2"
            android:fontFamily="@font/contm"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="@string/movie_name"/>

        <TextView
            android:id="@+id/movie_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:fontFamily="@font/contm"
            android:text="@string/movie_description"/>

        <TextView
            android:id="@+id/movie_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:fontFamily="@font/contm"
            android:text="@string/movie_date"/>

    </LinearLayout>

</LinearLayout>